0.1.1
Added spin buttons to pref dialog.
Added tabbed prefs dialog.
Auto set window title in notebook/richtext/textfile if not specified on cli.
More sensible default sizes for dialogs if width/height not set on cli.
Prefsdialog type size can be overridden by setting both --width AND --height.
Updated README.
Added examples.
Added prefsdialog to types.
Code clean.
Added openfile/savefile types.
Added 'Home' to richtext viewer.
Update to README.
Added 'Refresh' button to richtext viewer.
Added extra info to --help.
Fixed quiting app when closing tailbox via window control etc.
Added type richtext.
Added type notepad.
Added type tailbox.
Code clean.
Standardised outputs.

0.1.0
Ignore button now returns 1.
Code clean.
Added --buttons option for most dialogs ( excluding input, getitem, colour and font ).
Updated manpage.
Code clean.
Changed type "what to "query" 
Added type "text".
Changed type "gettext to "input" 
Added font dialog.
Added "--ipseparator" to options ( for default text ).
Added "--fromstdin" to options to set default data from stdin.

0.0.7
Standardised options.
More docs.
Tided up class inits.
Display results of colour chooser from desktopfile.
Added a desktop file for the colour chooser.
Auto detect whether to include alpha channel in colour dialog based on start colour.
Added colour dialog.
Better defaults for those dialogs that support size ( list/text/image ).
Added image file view ( qt6 seems to support more image formats ).
Fixed default output separator.
Tided up build scripts.
Added --enable-qt6 to configure options.

0.0.5
Added textfile view.
Added output separator to options for multiple selections.
Added list box.

0.0.1
Set width/height of form dialog from opts.
Added simple form box.
Added item box.
Added input box.
Updated default options.
1st commit.
Started message boxes.